@@ -284,7 +284,8 @@
   [#6720] FAQ update. Add EEPROM section, baud rate section. Correct spelling.
   [#6878] eewr_byte.S update for patch #6718
   [#6895] Improved malloc behaviour when expanding used area
-  
+  [#6897] Allow <util/setbaud.h> to be used with assembler source
+
 * New functions:
 
    cbrt
